# PJdroid

./: .gitmodules
gradle/wrapper/: gradle-wrapper.properties
mobile/: CMakeLists.txt  build.gradle  proguard-rules.pro
mobile/src/androidTest/java/com/spectralink/pjdroid/: ExampleInstrumentedTest.java
mobile/src/main/: AndroidManifest.xml
mobile/src/main/cpp/: native-lib.cpp
mobile/src/main/cpp/jni-include/: common.h
mobile/src/main/java/com/spectralink/pjdroid/: MainActivity.java
mobile/src/main/res/layout/: activity_main.xml
mobile/src/main/res/values/: strings.xml
mobile/src/test/java/com/spectralink/pjdroid/: ExampleUnitTest.java
